[package]
name = "yunxiao-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for Alibaba Cloud DevOps (Yunxiao) platform"
license = "MIT"
authors = ["YunXiao CLI Contributors"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "http2"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
http = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
comfy-table = "7"
urlencoding = "2"

[dev-dependencies]
mockito = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
chrono = "0.4"
